Add player page empty files, add encounter-difficulty.json update main.py to start working towards encounter generation

--- a/ux/src/pages/home/home.html
+++ b/ux/src/pages/home/home.html
@@ -3,10 +3,10 @@
         <ion-item>
             <ion-label>Difficulty</ion-label>
             <ion-select [(ngModel)]="encounter.difficulty" name="difficulty">
-                <ion-option value="0">Easy</ion-option>
-                <ion-option value="1">Medium</ion-option>
-                <ion-option value="2">Hard</ion-option>
-                <ion-option value="3">Deadly</ion-option>
+                <ion-option value="easy">Easy</ion-option>
+                <ion-option value="medium">Medium</ion-option>
+                <ion-option value="hard">Hard</ion-option>
+                <ion-option value="deadly">Deadly</ion-option>
             </ion-select>
         </ion-item>
         <!--switch this to a loaded list foreach -->
