--- a/ux/src/pages/encounter/encounter.html
+++ b/ux/src/pages/encounter/encounter.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the EncounterPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,6 +9,13 @@
 
 
 <ion-content padding>
-
+  <ion-item text-center>
+    <h3>Encounter CR: {{ CR }}</h3>
+  </ion-item>
+  <ion-list>
+    <ion-item *ngFor="let monster of monsters">
+      <h2>{{ monster.name }}</h2>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
